--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,7 +24,7 @@ dependencies:
   flutter:
     sdk: flutter
   provider: ^6.0.1
-  get_it: ^7.2.0
+  google_fonts: ^2.1.0
   http: ^0.13.4
 
   # The following adds the Cupertino Icons font to your application.
