--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,7 +14,7 @@ dependencies:
   http: ^0.13.4
   firebase_core: ^1.7.0
   firebase_auth: ^3.1.3
-
+  connectivity_plus: 
   cupertino_icons: ^1.0.2
 
 dev_dependencies:
